# FreedomUSTaxReturn

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ACCESSIBILITY_IMPLEMENTATION.md  ARCHITECTURE.md  CODE_QUALITY_MAINTENANCE.md  CODE_QUALITY_SETUP.md  COMPLETION_REPORT.md  DEPENDENCY_LICENSES.md  ERROR_HANDLING.md  FEATURE_COMPLETE_NOTICE.md  IMPLEMENTATION_SUMMARY.md  LICENSES.md  LICENSE_REVIEW.md  MAINTAINABILITY_IMPROVEMENT_ROADMAP.md  MODERN_UI_README.md  NAVIGATION_UPDATE_SUMMARY.md  NEXT_DEVELOPMENT_PRIORITIES_ROADMAP_2026.md  NEXT_STEPS_ACTION_PLAN.md  OCR_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_1_AT_A_GLANCE.md  PHASE_1_COMPLETE.md  PHASE_1_COMPLETION_CHECKLIST.md  PHASE_1_DOCUMENTATION_INDEX.md  PHASE_1_EXECUTIVE_SUMMARY.md  PHASE_1_REFACTORING_REPORT.md  PHASE_4_FINAL_SUMMARY.md  PHASE_5_COMPLETION_REPORT.md  PHASE_6_COMPLETE.md  PHASE_6_FINAL_COMPLETION_REPORT.md  PHASE_6_IMPLEMENTATION.py  PHASE_6_INTEGRATION_PLAN.md  PHASE_6_INTEGRATION_TESTING_REPORT.md  PHASE_6_INTEGRATION_TESTING_SUMMARY.md  PHASE_6_INTEGRATION_TEST_RESULTS.txt  PHASE_6_PROGRESS_REPORT.md  PROJECT_REORGANIZATION.md  QUICK_REFERENCE.md  README.md  (+49 more)
.github/workflows/: ci.yml
config/: __init__.py  app_config.py  dependencies.py  tax_year_config.py
constants/: __init__.py  pdf_fields.py
data/: state_tax_data.json  tax_interview_questions.json
data/translations/: en.json  es.json  fr.json
docs/: CONVERSION_SESSION_COMPLETE.md  DIALOG_TO_PAGE_CONVERSION_ROADMAP.md  PHASE_1B_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_4_PROGRESS_UPDATE.md  PHASE_CONVERSION_PROGRESS.md  STATE_TAX_INTEGRATION_COMPLETION.md
docs/analysis/: ANALYSIS_2025_TAX_REQUIREMENTS.md  CODE_COMPLEXITY_ANALYSIS.md  CODE_REVIEW_CLEAN_CODE_SOLID.md  COMPLEXITY_IMPROVEMENTS_SUMMARY.md  DEVELOPER_QUICK_REFERENCE.md  ERROR_HANDLING_ANALYSIS.md  MAINTAINABILITY_ANALYSIS.md  MAINTAINABILITY_ANALYSIS_INDEX.md  MAINTAINABILITY_AUDIT_2026.md  MAINTAINABILITY_SUMMARY.md  PERFORMANCE_IMPROVEMENTS_SUMMARY.md  REFACTORING_SUMMARY.md  SECURITY_ANALYSIS.md  TESTABILITY_ANALYSIS.md
docs/coverage/: COVERAGE_75_STRATEGY.md  COVERAGE_CONTINUATION_SUMMARY.txt  COVERAGE_FINAL_REPORT.txt  COVERAGE_SESSION_2025_12_29.md  COVERAGE_SESSION_SUMMARY.txt  TESTING_CHECKLIST.md  TEST_SUMMARY.md
docs/guides/: GETTING_STARTED.md  IRS_FORMS_REFERENCE.md  PDF_EXPORT_GUIDE.md  PDF_EXPORT_IMPLEMENTATION.md  (+1 more)
gui/: accessibility_dialogs.py  ai_deduction_finder_window.py  amended_return_dialog.py  audit_trail_window.py  bank_account_linking_window.py  client_login_dialog.py  client_management_dialogs.py  client_portal_window.py  cloud_backup_dialogs.py  cryptocurrency_tax_window.py  e_filing_window.py  estate_trust_window.py  estate_trust_window.py.backup  foreign_income_fbar_window.py  main_window.py  main_window_legacy.py  modern_main_window.py  modern_ui_components.py  partnership_s_corp_window.py  partnership_s_corp_window.py.backup  password_dialogs.py  plugin_management_window.py  ptin_ero_dialogs.py  quickbooks_integration_window.py  receipt_scanning_window.py  review_mode_window.py  sharing_dialog.py  state_tax_calculator_window.py  state_tax_integration_window.py  state_tax_window.py  state_tax_window.py.backup  tax_analytics_window.py  tax_dashboard_window.py  tax_interview_wizard.py  tax_planning_window.py  tax_projections_window.py  theme_manager.py  translation_management_window.py  two_factor_dialogs.py  year_comparison_window.py
models/: tax_data.py  user.py
services/: __init__.py  accessibility_service.py  ai_deduction_finder_service.py  audit_trail_service.py  authentication_service.py  bank_account_linking_service.py  cloud_backup_service.py  collaboration_service.py  cryptocurrency_tax_service.py  e_filing_service.py  encryption_service.py  error_logger.py  estate_trust_service.py  exceptions.py  foreign_income_fbar_service.py  form_recommendation_service.py  irs_mef_validator.py  ocr_service.py  partnership_s_corp_service.py  ptin_ero_service.py  quickbooks_integration_service.py  receipt_scanning_service.py  state_form_pdf_generator.py  state_tax_integration_service.py  state_tax_service.py  tax_analytics_service.py  tax_calculation_service.py  tax_interview_service.py  tax_planning_service.py  tax_year_service.py  translation_service.py
tests/: README.md  __init__.py  conftest.py  verify_both_pages.py  verify_checkbox_values.py
utils/: async_pdf.py  commands.py  error_tracker.py  event_bus.py  image_processing.py  import_utils.py  pdf_exceptions.py  pdf_field_inspector.py  pdf_form_filler.py  pdf_generator.py  resilience.py  tax_calculations.py  tax_calculations_backup.py  tax_data_validator.py  validation.py  w2_calculator.py
(+187 files in other folders)
