[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freedom-us-tax-return"
version = "2.0.0"
description = "A comprehensive Python application for US tax return preparation and planning"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Development Team"},
]
keywords = ["tax", "irs", "form-1040", "tax-planning", "e-filing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "customtkinter>=5.2.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
    "mypy>=1.6.0",
    "bandit>=1.7.5",
    "pydocstyle>=6.3.0",
    "radon>=6.0.0",
    "pre-commit>=3.5.0",
    "flake8>=6.1.0",
    "autopep8>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourorg/freedom-us-tax-return"
Documentation = "https://github.com/yourorg/freedom-us-tax-return/wiki"
Repository = "https://github.com/yourorg/freedom-us-tax-return"
Issues = "https://github.com/yourorg/freedom-us-tax-return/issues"

# Tool Configuration

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = "313"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", ".venv/*", "venv/*"]
known_first_party = ["config", "services", "models", "utils", "gui", "constants"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Too strict for existing codebase
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation before block
    "C0326",  # Bad whitespace around operator
    "R0903",  # Too few public methods (dataclasses trigger this)
    "R0913",  # Too many arguments
    "W0212",  # Access to protected member
]

[tool.pylint.format]
max-line-length = 100
indent-string = '    '

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "z", "e", "f"]

[tool.pylint.design]
max-attributes = 10
max-locals = 20

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings",
    "--cov=services",
    "--cov=models",
    "--cov=utils",
    "--cov=gui",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
branch = true
source = ["services", "models", "utils", "gui"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
    "^\\s*\\.\\.\\.\\s*$",
]
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pydocstyle]
convention = "google"
match = "(?!test_|_test\\.py).*\\.py"
match_dir = "(?!tests|htmlcov|build|dist|\\.venv|venv).*"

[tool.radon]
exclude = ["tests/*", "build/*", "dist/*", ".venv/*", "venv/*"]
ignore_patterns = ["(^|.*/)(tests|test_.*?|.*_test\\.py)(.*)?$"]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv", "venv"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls
